# scan-tracking

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  FIX_CAPTURE_ERROR.txt  FTP_MONITOR_README.txt  README.md  config.ini  connect_all.py  connect_retry.py  kill_port_8999.bat  英文输出翻译完整总结.md
app/: CMakeLists.txt
app/include/scan_tracking/app/: console_runtime.h
app/src/: console_runtime.cpp  main.cpp
cmake/: HikMvsSdk.cmake  MechEyeSdk.cmake  PclRuntime.cmake  ProjectOptions.cmake
common/: CMakeLists.txt
common/include/scan_tracking/common/: application_info.h  config_manager.h  logger.h
common/src/: application_info.cpp  config_manager.cpp  logger.cpp
docs/: 6.11_完整扫描流程时序图.md  camera_capture_troubleshooting.md  cmake_build_fix_guide.md  plan48.md  plc_modbus_寄存器地址表_v0.1.xlsx  project_progress_review.md  vision_framework.md  vs2017_vs2022_compatibility_fix.md  基础与扫描开发计划.md  封头检测工位PLC-IPC Modbus通信协议_v0.1.md  封头检测工位_TCP_IP显控通信协议_v1.0.md  待完善细节清单_PLC联调前.md  算法使用API.md
docs/sequence_diagrams/: 6.10_断线急停中断与中途复始逻辑时序图.md  6.1_系统安全与设备在线监测时序图.md  6.2_测试初始化与多相机自检时序图.md  6.3_上料工位判断与抓取点解算时序图.md  6.4_上料搬运与放料扫描区协同时序图.md  6.5_扫描工位有无料与通孔位姿复校验时序图.md  6.6_分段扫描与多传感器联动执行时序图.md  6.7_综合OCR缺陷识别与3D解算时序图.md  6.8_下料区满料判定与卸料点求解时序图.md  6.9_下料执行落位复盘时序图.md
modules/: CMakeLists.txt
modules/flow_control/: CMakeLists.txt
modules/flow_control/include/scan_tracking/flow_control/: plc_protocol.h  state_machine.h
modules/flow_control/src/: state_machine.cpp
modules/hmi_server/: CMakeLists.txt
modules/hmi_server/include/scan_tracking/hmi_server/: hmi_protocol.h  hmi_session.h  hmi_tcp_server.h
modules/hmi_server/src/: hmi_protocol.cpp  hmi_session.cpp  hmi_tcp_server.cpp
modules/mech_eye/: CMakeLists.txt
modules/mech_eye/include/scan_tracking/mech_eye/: mech_eye_nano_smoke_test.h  mech_eye_service.h  mech_eye_types.h  mech_eye_worker.h
modules/mech_eye/src/: mech_eye_nano_smoke_test.cpp  mech_eye_service.cpp  mech_eye_worker.cpp
modules/modbus/: CMakeLists.txt
modules/modbus/include/scan_tracking/modbus/: modbus_service.h
modules/modbus/src/: modbus_service.cpp
modules/tracking/: CMakeLists.txt
modules/tracking/include/scan_tracking/tracking/: lb_pose_check.h  tracking_service.h
modules/tracking/src/: lb_pose_check.cpp  tracking_service.cpp
modules/tracking/tests/: tracking_service_smoke_test.cpp
modules/vision/: CMakeLists.txt
modules/vision/include/scan_tracking/vision/: hik_camera_c_controller.h  hik_camera_service.h  hik_smart_camera_ftp_monitor.h  hik_smart_camera_tcp_server.h  lanyou_detection_adapter.h  lanyou_first_station_adapter.h  lanyou_issue_codes.h  lb_pose_detection_adapter.h  vision_pipeline_service.h  vision_types.h
modules/vision/src/: hik_camera_c_controller.cpp  hik_camera_service.cpp  hik_smart_camera_ftp_monitor.cpp  hik_smart_camera_tcp_server.cpp  lanyou_detection_adapter.cpp  lanyou_first_station_adapter.cpp  lb_pose_detection_adapter.cpp  lb_pose_detection_adapter_stub.cpp  vision_pipeline_service.cpp
modules/vision/tests/: lanyou_detection_adapter_smoke_test.cpp  lanyou_first_station_adapter_smoke_test.cpp  lanyou_first_station_ply_runner.cpp
tools/: scan_tracking_dev.cmd
